--- a/package.json
+++ b/package.json
@@ -20,5 +20,9 @@
     "mongoose": "^8.2.2",
     "morgan": "^1.10.0",
     "nodemon": "^3.1.0"
+  },
+  "engines" : { 
+    "npm" : ">=8.0.0 <9.0.0",
+    "node" : ">=16.0.0 <17.0.0"
   }
 }
